output
g++ -I. -g -std=c++11 -Wall -Wextra -Werror -pthread -O *.cpp -lgtest -lgtest_main -o run.tests
Cell.cpp:9:7: error: unused parameter 'numberOfLiveNeighbours' [-Werror=unused-parameter]
 Cell* DeadCell::breedWithLiveNeighbours(int numberOfLiveNeighbours) {
       ^
Cell.cpp:13:7: error: unused parameter 'numberOfLiveNeighbours' [-Werror=unused-parameter]
 Cell* ZombieCell::breedWithLiveNeighbours(int numberOfLiveNeighbours) {
       ^
cc1plus: all warnings being treated as errors
make: *** [run.tests] Error 1
